...
                            ZStack {
                                VStack {
                                    SectionLabel(text: "Filmai")
                                        .padding(.top, Self.verticalPadding)
                                        .transitionSectionLabel(viewStore.isTransitioning)

                                    MovieListView(store: store)
                                        // Instead of using a `GeometryReader` view to retrieve
                                        // the width value of the screen, it is more efficient
                                        // to use the `UIScreen` object, since the view always
                                        // takes up the entire width of the screen.
                                        .frame(height: UIScreen.main.bounds.width * Self.heightToWidthRatio)
                                        .transitionMovieListView(viewStore.isTransitioning)

                                    SectionLabel(text: "Seansai")
                                        .transitionSectionLabel(viewStore.isTransitioning)

                                    ShowingListView(store: store)
                                        .transitionShowingListView(viewStore.isTransitioning)
                                }

                                if viewStore.movieItems.isEmpty {
                                    DatasourceErrorView()
                                        .frame(
...
